<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IngresarEquipo"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/ingresarEquipo_tvIngresarEquipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/main_ingresarEquipo"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/ingresarEquipo_edtId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorText"
        android:hint="@string/ingresarEquipo_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingresarEquipo_tvIngresarEquipo" />

    <EditText
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/ingresarEquipo_edtMarca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorText"
        android:hint="@string/ingresarEquipo_marca"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingresarEquipo_edtId" />

    <EditText
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/ingresarEquipo_edtModelo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorText"
        android:hint="@string/ingresarEquipo_modelo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingresarEquipo_edtMarca" />

    <EditText
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/ingresarEquipo_edtRAM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorText"
        android:hint="@string/ingresarEquipo_ram"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingresarEquipo_edtModelo" />

    <EditText
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/ingresarEquipo_edtSO"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorText"
        android:hint="@string/ingresarEquipo_SO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingresarEquipo_edtRAM" />

    <EditText
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/ingresarEquipo_edtRUT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorText"
        android:hint="@string/ingresarEquipo_RUT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingresarEquipo_edtSO" />

    <EditText
        android:id="@+id/ingresarEquipo_edtRequerimiento"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorText"
        android:hint="@string/ingresarEquipo_requerimiento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingresarEquipo_edtRUT" />

    <Button
        android:onClick="ingresarEquipo"
        android:textSize="16sp"
        android:layout_marginEnd="100dp"
        android:layout_marginStart="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_ingresarEquipo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingresarEquipo_edtRequerimiento"
        app:layout_constraintVertical_bias="0.389" />

</androidx.constraintlayout.widget.ConstraintLayout>